# nifty_tools

./: .travis.yml  AUTHORS.rst  CMakeLists.txt  CONTRIBUTING.rst  HISTORY.rst  LICENSE  NIFTY_TOOLSConfig.cmake.in  README.md  README.rst
docs/: Doxyfile  environment.yml
docs/source/: .gitignore  conf.py  index.rst  installation.rst  readme.rst  usage.rst
include/nifty/tools/: map_key_iterator.hpp  range.hpp  tools.hpp  tools_config.hpp  tuple.hpp
recipe/: build.sh  meta.yaml
src/docs/: CMakeLists.txt
src/docs/doxygen_doc/: Doxyfile.in  Doxyfile_xml.in
src/docs/doxygen_doc/include/: mainpage.dox
src/examples/: example_1.cpp
src/tests/: CMakeLists.txt  test_for_each.cpp  test_nifty_tools_a.cpp  test_nifty_tools_hello_world.cpp
